# skillz

./: .gitignore  AGENTS.md  CLAUDE.md  EXAMPLES_SUMMARY.md  GEMINI.md  QUICK_START.md  README.md  REVIEW-AGENTS.md  USAGE_GUIDE.md  example-config.yaml  pyproject.toml
.ai/: config.yaml
.ai/agents/: agents.yaml
.ai/policies/: global.md
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml  validate-skills.yml
cli/: __init__.py  config.py  main.py  utils.py  validator.py
cli/commands/: __init__.py  config.py  create.py  export.py  info.py  install.py  list.py  search.py  uninstall.py  update.py
cli/export/: __init__.py  config_loader.py  content_aggregator.py  exporter.py
docs/: EXPORT.md
docs/plans/: 2025-11-08-install-all-option-design.md
skills/academic/phd-qualifier/: README.md
skills/communication/scientific-writing/: README.md
skills/communication/scientific-writing/examples/: research-paper-sections.md
skills/communication/scientific-writing/references/: abstract-writing.md  citation-management.md  discussion-writing.md  figure-design.md  grant-writing.md  introduction-writing.md  language-clarity.md  methods-writing.md  paper-structure.md  results-writing.md  (+3 more)
skills/creative/brainstorming/: README.md
skills/creative/video-storytelling/: README.md
skills/development/code-reviewer/: QUICK_REFERENCE.md  README.md
skills/development/tdd/: README.md
skills/productivity/planning/: README.md
skills/programming/claude-light/: QUICK_REFERENCE.md  README.md
skills/programming/emacs-lisp/: README.md
skills/programming/fairchem/: README.md
skills/programming/pymatgen/: README.md
skills/programming/python-ase/: README.md
skills/programming/python-best-practices/: README.md
skills/python/pycse/: baseline_observations.md  test_pressure_scenario.md  test_results.md
skills/research/eln/: README.md
skills/research/literature-review/: QUICK_REFERENCE.md  README.md  SKILL.md
skills/research/scientific-reviewer/: QUICK_REFERENCE.md  README.md
skills/technical/troubleshooting/: README.md
templates/export/codex/: agents.md.j2
templates/export/copilot/: agent.md.j2  copilot.md.j2
templates/export/gemini/: gemini.md.j2
tests/: __init__.py  conftest.py  test_config.py  test_export.py  test_utils.py  test_validator.py
(+43 files in other folders)
